<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/desc_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/cheesecake" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheesecake_turn"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/size_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/first_card" />

            <Spinner
                android:id="@+id/spinner_first_card"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/small_card"
                android:layout_gravity="center"
                android:entries="@array/users_count"
                android:gravity="center_vertical|center"
                android:visibility="visible" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:elevation="@dimen/card_padding" />

            <FrameLayout
                android:id="@+id/frame_second_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/second_card" />

                    <Spinner
                        android:id="@+id/spinner_second_card"
                        android:layout_width="@dimen/card_width"
                        android:layout_height="@dimen/small_card"
                        android:layout_gravity="center"
                        android:entries="@array/users_count"
                        android:gravity="center_vertical|center"
                        android:visibility="visible" />
                </LinearLayout>

            </FrameLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:elevation="@dimen/card_padding" />

            <Button
                android:id="@+id/button_cheesecake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/do_cheesecake"
                android:visibility="visible" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>